[gd_scene load_steps=3 format=3 uid="uid://q5g0v26dm1my"]

[ext_resource type="Script" uid="uid://cvsjvf2hm0j0v" path="res://Modules/Interaction/Computer/computer_tab.gd" id="1_t7psn"]
[ext_resource type="PackedScene" uid="uid://bnhismy4o74yd" path="res://Modules/Interaction/Computer/Email App/email_tab.tscn" id="2_7gulw"]

[node name="Computer Tab" type="Control"]
z_index = 1
custom_minimum_size = Vector2(1200, 800)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7psn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bar" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="Drag" type="Button" parent="VBoxContainer/Bar"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0

[node name="Close" type="Button" parent="VBoxContainer/Bar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -30.0
offset_right = -34.0
offset_bottom = 26.0
grow_horizontal = 0
grow_vertical = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6441449, 0.73867965, 0.9601926, 1)

[node name="Email_Tab" parent="VBoxContainer/Panel" instance=ExtResource("2_7gulw")]
layout_mode = 1

[connection signal="button_up" from="VBoxContainer/Bar/Drag" to="." method="_on_drag_button_up"]
[connection signal="pressed" from="VBoxContainer/Bar/Drag" to="." method="_on_drag_pressed"]
[connection signal="pressed" from="VBoxContainer/Bar/Close" to="." method="_on_close_pressed"]
